# rs-point-serialization

./: Cargo.toml  README.md
src/: lib.rs
