[package]
name = "point-encoding-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
blstrs = "0.1.0"
hex = "0.4.3"
num-bigint = "0.4.3"
mcore={path="../core/rust/mcore/", version="0.1.0"}

[dependencies.rand_core]
version = "0.5.1"

[dependencies.rand_xorshift]
version = "0.2.0"

[dependencies.groupy]
version = "0.3.1"

[dependencies.num-traits]
version = "0.2.11"
features = ["i128"]
default-features = false